[package]
name = "bar"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

[dependencies]
ureq = { version = "1.5.0", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
systemstat = "0.1"
unixbar = { git = "https://github.com/wezm/unixbar.git", branch = "awesome", default-features = false, features = ["awesome", "systemstat"] }
#unixbar = { path = "../unixbar", features = ["awesome", "systemstat"], default-features = false }
